--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^5.0.0",
+    "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4"
   }
 }
